z-index large image gallery fix

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -96,7 +96,7 @@
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
-  z-index: 40;
+  z-index: 95;
   max-width: 1400px;
   width: 100%;
   max-height: 810px;
